src/test/deca/syntax/invalid/test_synt/class/public_field.deca
// Description:
//    Test de declaration d'une classe dans laquelle on declare un Public int
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur de syntax --> can't assign the type Public inside class
//
// Historique:
//    cree le 19/01/2022



   class coordonnees{
       Public int x;

   }
{
}